k3s/speedtest-tracker/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: speedtest-tracker
    namespace: speedtest-tracker
    labels:
        app.kubernetes.io/name: speedtest-tracker
    annotations:
        reloader.stakater.com/auto: "true"
spec:
    replicas: 1
    selector:
        matchLabels:
            app.kubernetes.io/name: speedtest-tracker
    template:
        metadata:
            labels:
                app.kubernetes.io/name: speedtest-tracker
        spec:
            securityContext:
                fsGroup: 1000
            containers:
                - name: speedtest-tracker
                  image: lscr.io/linuxserver/speedtest-tracker:v1.14.6-ls164
                  imagePullPolicy: Always
                  ports:
                      - name: http
                        containerPort: 80
                        protocol: TCP
                  volumeMounts:
                      - name: data
                        mountPath: /config
                  startupProbe:
                      httpGet:
                          path: /
                          port: http
                      periodSeconds: 10
                      failureThreshold: 30
                  readinessProbe:
                      httpGet:
                          path: /
                          port: http
                      periodSeconds: 10
                  livenessProbe:
                      httpGet:
                          path: /
                          port: http
                      periodSeconds: 30
                  resources:
                      requests:
                          cpu: 100m
                          memory: 256Mi
                      limits:
                          memory: 512Mi
            volumes:
                - name: data
                  persistentVolumeClaim:
                      claimName: speedtest-tracker-data-nfs

---
apiVersion: v1
kind: Service
metadata:
    name: speedtest-tracker
    namespace: speedtest-tracker
    labels:
        app.kubernetes.io/name: speedtest-tracker
spec:
    selector:
        app.kubernetes.io/name: speedtest-tracker
    ports:
        - name: http
          port: 80
          targetPort: http
