k3s/speedtest-tracker/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: speedtest-tracker
  namespace: speedtest-tracker
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`speedtest.d-kline.org`)
      kind: Rule
      middlewares:
        - name: local-only
          namespace: traefik
        - name: authelia
          namespace: traefik
        - name: security-headers
          namespace: traefik
      services:
        - name: speedtest-tracker
          port: 80
  tls: {}
